--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ input {
 .recipe_container img {
   margin-top: 20px;
   margin-bottom: 20px;
-  border: 1px solid #707070;
+  /* border: 1px solid #707070; */
   border-radius: 5px;
 }
 
@@ -220,12 +220,11 @@ p {
 }
 
 .polaroid {
-  border: 1px solid #C8C8C8;
   width: 70%;
   height: 100%;
   border-radius: 2%;
   margin: 0 auto;
-  box-shadow: 2px 3px #707070;
+  box-shadow: 10px 10px 10px #707070;
 }
 
 .polaroid p {
