--- a/src/App.css
+++ b/src/App.css
@@ -93,8 +93,9 @@ input:focus{
   background-image: url('https://www.sbs.com.au/food/sites/sbs.com.au.food/files/styles/full/public/kl-nasi-lemak.jpg?itok=fySpT_cU');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
   font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+  width: 100vw;
   overflow-y: scroll;
 
 }
@@ -411,10 +412,20 @@ html{
   margin: 50% auto;
   border-radius: 5px;
   padding: 40px;
-  box-shadow: 10px 10px 10px #707070;
+  font-size: 18px;
+  /* box-shadow: 10px 10px 10px #707070; */
+}
+
+.people_container h1 {
+  font-size: 48px;
 }
 
 .nutella {
   margin: 50% auto;
   border-radius: 100%;
 }
+
+/* .friend_profile_container {
+  height: 1000px;
+  background-color: red;
+} */
